basic end to end PoC works!
I can
-create or join a game on multiple browsers/devices
-render a game state
-build a simplified UI for player actions
-operate on that game state safely to e.g. float a railroad (by moving money between companies,
	setting share ownership, etc.)

--- a/imports/modules/iberian_gauge/game.css
+++ b/imports/modules/iberian_gauge/game.css
@@ -2,3 +2,81 @@ form#setupForm span {
 	float: left;
 	width: 100px;
 }
+
+.dividendChart {
+	float: left;
+}
+
+.dividendChart td {
+	text-align: center;
+}
+
+.stockbump {
+	color: green;
+}
+
+.ghosted {
+	opacity: .15;
+}
+
+.circle {
+	border-radius: 50%;
+	text-align: center;
+	border: 1px solid black;
+	margin: auto;
+}
+
+.circle.small {
+	width: 20px;
+	height: 20px;
+}
+
+.circle.tiny {
+	width: 15px;
+	height: 15px;
+}
+
+.circle.small p {
+	position: relative;
+	top: -15px;
+}
+
+.circle.tiny p {
+	position: relative;
+	top: -10px;
+	font-size: .7em;
+}
+
+td.railroad {
+	text-align: center;
+}
+
+.aqua.railroad {
+	background-color: aqua;
+}
+
+.red.railroad {
+	background-color: red;
+	color: white;
+}
+
+.purple.railroad {
+	background-color: purple;
+	color: white;
+}
+
+.orange.railroad {
+	background-color: orange;
+}
+
+.yellow.railroad {
+	background-color: yellow;
+}
+
+.playerHoldings {
+	float: right;
+}
+
+hr {
+	clear: both;
+}
