reworked game ops to be classes for better encapsulation
this will let us rebuild ops from the database, sets us up
for undo, etc.

--- a/client/ui/SiteNav.css
+++ b/client/ui/SiteNav.css
@@ -1,3 +1,4 @@
+/* thx https://stackoverflow.com/questions/46028417/how-do-i-stop-my-main-body-overlapping-my-navbar-and-banner-in-html-css?rq=1 */
 div.top_nav {
 	background-color: green;
 	color: white;
